Fix Alignment of Text Only Logo for New Grid

--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -3,8 +3,8 @@
 @import "_type-scale";
 
 .logo {
-  @include module-spread-across(2, 3);
-  @include module-spread-down(1, 1);
+    @include module-spread-across(1, 5);
+    @include module-spread-down(1, 1);
     align-self: center;
     text-align: center;
 
@@ -14,8 +14,9 @@
   }
 
   @include break($for-large-view) {
-      @include module-spread-across(1, 2);
+      @include module-spread-across(1, 3);
       margin: 0 3rem;
+      text-align: left;
   }
 }
 
